fixed nav on small screens

--- a/wp-content/themes/themeforest-13899765-bookme-booking-for-business-and-entrepreneurs/bookme/style.css
+++ b/wp-content/themes/themeforest-13899765-bookme-booking-for-business-and-entrepreneurs/bookme/style.css
@@ -646,7 +646,7 @@ body #booked-profile-page input[type=submit].button-primary, body table.booked-c
     width: 66.66666667%;
 }
 .logo-wrapper img {
-	margin-bottom: 15px;
+	margin-bottom: 5px;
 }
 .site-name {
 	margin-top: 0;
